--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,10 @@
 .DS_Store
 node_modules/
 # dist/
-.github
+.github/
 npm-debug.log
 yarn-error.log
+.vscode
 
 # Editor directories and files
 .idea
